--- a/content/articles/custom-footnotes-mdx-gatsby/custom-footnotes-mdx-gatsby.mdx
+++ b/content/articles/custom-footnotes-mdx-gatsby/custom-footnotes-mdx-gatsby.mdx
@@ -2,16 +2,16 @@
 path: '/advanced-custom-mdx-components'
 date: '2019-05-15'
 title: 'Custom Footnotes with MDX in Gatsby '
-subtitle: 'Using the MDX wrapper key to '
+subtitle: 'Using the MDX wrapper key to customize your MDX output'
 ---
 
-MDX offers a pretty straightforward way to handle replacing the default html elements via the `MDXProvider` component in `@mdx-js/react`, but what happens when you need to replace an element that isn't in the default component list, or one that is unique in some way?
+MDX offers a pretty straightforward way to handle replacing the default html elements via the `MDXProvider` component in `@mdx-js/react`, but what happens when you need to replace an element that isn't in the default component list or one that is unique in some way?
 
 This scenario may come up when using a remark plugin or supported features, such as footnotes[^1]. See the final example implementation [on codesandbox](https://codesandbox.io/s/custommdxfootnotes-83mqi), or follow along below.
 
 ## Using the wrapper component
 
-MDXProvider offers a special [wrapper key](https://mdxjs.com/getting-started#using-the-wrapper) that is primarily used to modify the wrapper around the markdown content. If you dive into the [wrapper customization guide](https://mdxjs.com/guides/wrapper-customization), you'll find that it also provides access to the MDX children componets.
+MDXProvider offers a special [wrapper key](https://mdxjs.com/getting-started#using-the-wrapper) that is primarily used to modify the wrapper around the markdown content. If you dive into the [wrapper customization guide](https://mdxjs.com/guides/wrapper-customization), you'll find that it also provides access to the MDX children components.
 
 We'll use this functionality to iterate over the children, find the `div` with a class of `footnotes` (the default from gatsby-mdx), and replace it with a custom component. The component object to be passed to the provider ends up looking like the following:
 
