--- a/content/articles/classroom-probot/2019-04-03-classroom-probot.mdx
+++ b/content/articles/classroom-probot/2019-04-03-classroom-probot.mdx
@@ -5,9 +5,9 @@ title: 'Powering up GitHub Classroom with Probot'
 subtitle: 'Automate low-hanging feedback and default settings'
 ---
 
-<!-- Managing student work with GitHub offers an opportunity to give software development students practical experience with the platform, and provides realistic feedback in a way they will experience in their future career. -->
+Managing student work with GitHub offers an opportunity to give software development students practical experience with the platform and provides realistic feedback in a way they will experience in their future career.
 
-GitHub offers a tool, GitHub Classroom, that makes setting up and managing projects for students pretty easy. It works on an org-level, and handles basic setup and permissions.
+GitHub offers a tool, GitHub Classroom, that makes setting up and managing projects for students pretty easy. It works on an org-level and handles basic setup and permissions.
 
 That said, the platform's goals won't always align perfectly with the workflow of individual instructors. A great way around this takes advantage of an open source project, [Probot](https://probot.github.io). See their docs for details on getting set up.
 
@@ -32,7 +32,7 @@ With only a few lines of code, we now have a framework to respond to new issues.
 
 ## Locking down student repos
 
-For my courses, I require students to submit via a pull request. This allows for code-review style feedback on the PR, and allows me to request changes or approve the PR. To stop any accidental pushes to master, the default branch permissions on each repo need to be set.
+For my courses, I require students to submit via a pull request. This allows for code-review style feedback on the PR and allows me to request changes or approve the PR. To stop any accidental pushes to master, the default branch permissions on each repo need to be set.
 
 To handle this we can write a small Probot app to listen for repository imports[^1] and set the desired branch protection rules for the new repo. I suggest going through their [Getting Started documentation]() if you haven't already.
 
@@ -69,6 +69,6 @@ module.exports = app => {
 
 <CodeEmbed service="glitch" name="classroom-master-lockdown" />
 
-This example hard-codes in our configuration, but it is also common to include config files inside the repo or organization itself to allow more user-level configurability.
+This example hard-codes in our configuration, but it is also common to include config files inside the repo or organization itself to allow more user-level reconfigurability.
 
 [^1]: GitHub Classroom fires off a handful of hooks on repo creation, but `repository_import` is the final stage of the process.
