--- a/content/drafts/variable-fonts-in-gatsby.mdx
+++ b/content/drafts/variable-fonts-in-gatsby.mdx
@@ -57,8 +57,8 @@ const globals = css`
 `
 ```
 
-The key different here is the src location. While the file may be in the `static` folder, we are referncing its final location in the `@font-face` src declaration.
+The key different here is the src location. While the file may be in the `static` folder, we are referencing its final location in the `@font-face` src declaration.
 
 ---
 
-While variable fonts still require a some extra work and occasionally extra overhead, if your site is making use of multiple weights or styles you may find that their inclusion saves resources.
+While variable fonts still require a some extra work and occasionally extra overhead, if your site is making use of multiple weights or styles you may find that including them saves resources.
