--- a/content/articles/variable-fonts-in-gatsby.mdx
+++ b/content/articles/variable-fonts-in-gatsby.mdx
@@ -11,7 +11,7 @@ For an overview on variable font usage in general, take a look at [MDN's guide](
 
 In the examples below I'm using [Emotion's](https://emotion.sh) global syntax, but you can define the `@fontface` declaration wherever best suits your project. On this site, all global styles are applied in the core layout wrapper component.
 
-Do keep in mind that if you're using a CSS-in-JS library that makes use of the object syntax rather than the template literal syntax, you may run into problems when using multiple `@fontface` rules. [See the bonus section below on how to counter this](#)
+Do keep in mind that if you're using a CSS-in-JS library that makes use of the object syntax rather than the template literal syntax, you may run into problems when using multiple `@fontface` rules. See the section at the end of this article for ways to deal with this problem.
 
 ---
 
